--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redirect-tester",
   "version": "1.0.0",
-  "description": "",
+  "description": "basic redirect tester",
   "main": "test.js",
   "dependencies": {
     "url": "^0.11.0"
